styrene-docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: styrene-docs
  labels:
    vanderlyn.house/gateway-routes: "true"
